add: lecture invite enrollment and secure progression flow